# json-five

./: .coveragerc  .pre-commit-config.yaml  .travis.yml  README.md  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: release.yml  unittests.yml
docs/: QuickStart.rst  comments.rst  conf.py  docrequirements.txt  extending.rst  how.rst  index.rst
json5/: __init__.py  dumper.py  loader.py  model.py  parser.py  tokenizer.py  tool.py  utils.py
tests/: json5_official_tests.py  test_errors.py  test_json5_dump.py  test_json5_load.py  test_json5_official_tests.py  test_json_helpers.py  test_json_tool.py  test_loads_options.py  test_model.py  test_model_loader_dumper.py  test_modelizer.py  test_regressions.py  test_roundtrip.py
