[metadata]
name = json-five
version = 1.0.0.post2
url = https://github.com/spyoungtech/json-five
license = Apache
author = Spencer Phillip Young
author_email = spencer.young@spyoung.com
description = A JSON5 parser that, among other features, supports round-trip preservation of comments
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

license_files = LICENSE

[options]
packages = json5
python_requires = >=3.8.0
install_requires =
    sly
    regex

[options.package_data]
json5 =
    py.typed
